<resources>
    <string name="app_name">Olmatix</string>
    <string name="app_version">2.0</string>

    <!-- label network -->
    <string name="pref_domain">Server Credential</string>
    <string name="server_title">Address</string>
    <string name="server_sum">Olmatix server address</string>
    <string name="port_title">Port Number</string>
    <string name="port_sum">Olmatix port number</string>

    <string name="pref_network">Network Setting</string>
    <string name="pref_user">User Credential</string>
    <string name="user_title">User Name</string>
    <string name="pass_title">Password</string>
    <string name="address">cloud.olmatix.com</string>
    <string name="port">1883</string>
    <string name="info_address">Please input Olmatix Server Address, leave default if you dont know..</string>
    <string name="info_port">Please input port number for the server, leave default if you dont know..</string>
    <string name="info_user">Type your user name here</string>
    <string name="info_pass">Type your password here</string>


    <!-- label menu -->
    <string name="action_settings">Settings</string>
    <string name="status_conn">Waiting respond..</string>

    <string name="pref_about">About</string>
    <string name="about_sum">Olmatix 2.0 by lesjaw@olmatix.com</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="action_about">About</string>
    <string name="switch_title">Enable Persistence</string>

    <string name="err_internet">No internet connection</string>
    <string name="local_service_label">Olmatix 2.0</string>

    <string name="add_node_dialog">Add Node</string>
    <string name="add_node_dialog_sum">Type Olmatix product ID</string>
    <string name="connecting">Connecting to server..</string>
    <string name="sub_success">Subscribe success</string>
    <string name="sub_fail">Subscribe fail</string>
    <string name="conn_success">Connection Success</string>
    <string name="conn_fail">Connection Fail</string>
    <string name="service_start">Olmatix service starting..</string>
    <string name="service_stop">Olmatix service stop</string>
    <string name="nodename">Node Name</string>
    <string name="ipaddrs">IP Address</string>
    <string name="lastupdt">Last Update</string>
    <string name="uptime">Up Time</string>
    <string name="pref_setup">Setup Product</string>
    <string name="pref_wifi">WiFi Credential</string>
    <string name="ssid">SSID / WiFi</string>
    <string name="info_ssid">Type your home WiFi Name/SSID</string>
    <string name="info_pass_ssid">Type your home WiFi password</string>
    <string name="sendButton">Send Config</string>
    <string name="connect_product">Connect to product WiFi</string>
    <string name="action_exit">Exit</string>
    <string name="backbutton">Olmatix will go to background, dont kill/Force stop Olmatix or you wont receive any notification!</string>
    <string name="fav_label">Favorite</string>
    <string name="installed_label">Installed Node</string>
    <string name="signal">100</string>
    <string name="deviceoffline">Your devices OFFLINE!</string>
    <string name="latestAdding">Adding</string>
    <string name="reseting">is going to do a factory reset..</string>
    <string name="pref_misc">Miscellaneous</string>
    <string name="pref_location">Location</string>
    <string name="servicehomepos">Setup your location</string>
    <string name="opt_servicehomepos">Your Home Location</string>
    <string name="opt_Thold_desc">Range at which you will be considered out of home when you leave</string>
    <string name="opt_Thold">Distance From Home</string>
    <string name="opt_homepos_err">Error getting current position</string>
    <string name="opt_homepos_set">Home position set, press back now to see the location update</string>
    <string name="scene_label">Base on what?..</string>
    <string name="scene_do">What do you want to do?...</string>
    <string name="back">Back</string>
    <string name="next">Submit</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="opt_homepos_set_false">Can\'t find location</string>
    <string name="local_service_label_loc">Olmatix location update</string>
    <string name="switch_loc">Enable location notification?</string>
    <string name="switch_notif">Enable status notification?</string>
    <string name="opt_loc_notif">Location will update if you move</string>
    <string name="opt_loc_notif1">Notify me if device status change</string>
    <string name="opt_loc_notif2">Notify me if sensor door change</string>
    <string name="opt_loc_notif3">Notify me if sensor motion change</string>
    <string name="opt_loc_notif4">Notify me if sensor proximity change</string>

    <string name="switch_sum">Persistence connection to server</string>
    <string name="switch_locDisable">Disable location notification</string>
    <string name="switch_notifDisable">Disable status notification</string>
    <string name="loginfail">Login fail, bad user name or password!</string>
    <string name="description">Your password login</string>
    <string name="conStatus">Server Status</string>
    <string name="check_status">This is Olmatix connectin status</string>
    <string name="setup_hint_title">Select Product WiFi/SSID</string>
    <string name="action_reset">Reset Nodes</string>
    <string name="form_hint_title">Scene title required</string>
    <string name="form_hint_description">Scene Description</string>
    <string name="error_title_min_characters">At least %1$d characters</string>
    <string name="error_wifi_pick">Pick WiFi w/ SSID: Olmatix-ID</string>
    <string name="action_drawer">Drawer</string>

    <string-array name="steps_titles">
        <item>Connect to Olmatix product..</item>
        <item>Choose your home WiFi..</item>
        <item>Type WiFi Password..</item>
    </string-array>

    <string-array name="steps_scene_titles">
        <item>Setup your scene name..</item>
        <item>Choose your scene type..</item>
        <item>Setup your Time Schedule..</item>
        <item>Setup your Days Schedule..</item>
        <item>Choose nodes..</item>
    </string-array>

    <string-array name="steps_schedule_titles">
        <item>Setup your scene name..</item>
        <item>Choose your scene type..</item>

        <item>Choose nodes..</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recent_status_changes">Recent Status Changes</string>
    <string name="home_automation_amp_security_system"><![CDATA[Home Automation & Security System]]></string>
    <string name="no_location_detected">No location detected</string>
    <string name="label_setup_connecting">Connecting to Olmatix WiFi, it takes time to connect, if it takes too long, please select device id SSId in Android WiFi list!</string>
    <string name="labe_setup_pick">Please pick WiFi with Olmatix-XXXXXXXX</string>
    <string name="label_setup_sum1">"Olmatix device will connect to WiFi/SSID "</string>
    <string name="label_setup_sum2">" with password "</string>
    <string name="label_setup_sum3">, click OK to proceed</string>
    <string name="label_setup_alert_title">Setup Olmatix product</string>
    <string name="label_setup_sum">Summary ...</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_setup_pass_home_wifi">"Type your home WiFi password "</string>
    <string name="label_setup_connect_to">"You are connected to "</string>
    <string name="label_product">" product"</string>
    <string name="label_setup_success">Olmatix setup success, close app and reopen please..</string>
    <string name="label_setup_choose_wifi">You need to choose Home WiFi, Cancel setup!</string>
    <string name="label_setup_signal">" || Signal "</string>
    <string name="label_alarm_service_conn">Request connect</string>
    <string name="label_alarm_service_at">"at "</string>
    <string name="label_setup_sending">Sending configuration data to device, please wait..</string>
    <string name="switch_sensor_door">Notify Sensor Door/Window</string>
    <string name="switch_sensorDoorDisable">Disable notify sensor Door status</string>
    <string name="switch_sensor_motion">Notify Sensor Motion</string>
    <string name="switch_sensorMotionDisable">Disable notify sensor Motion status</string>
    <string name="switch_sensor_prox">Notify Sensor Proximity</string>
    <string name="switch_sensorProxDisable">Disable notify sensor Proximity status</string>
    <string name="button_ok">OK</string>
    <string name="app_ver">1.33</string>
    <string name="pref_ver">Version</string>
    <string name="network_setting">Configure network manually</string>
    <string name="misc">GPS Location, Notification etc</string>
    <string name="setup_product">Configure Olmatix device</string>
    <string name="appID">12345678</string>
    <string name="title_activity_maps">Map</string>
    <string name="pass">olmatix</string>
    <string name="user" />
    <string name="camgtw_title">Gateway Camera</string>
    <string name="info_cam">Input you Olmatix Camera Gateway</string>
    <string name="camgtw">None</string>

</resources>
