<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/switch_title"
        android:key="switch_conn"
        android:defaultValue="false"
        android:summary="@string/switch_sum">
    </CheckBoxPreference>

    <PreferenceCategory
        android:title="@string/pref_domain">

        <EditTextPreference
            android:key="server_address"
            android:title="@string/server_title"
            android:icon="@drawable/ic_server_black"
            android:summary="@string/server_sum"
            android:dialogMessage="@string/info_address"
            android:defaultValue="@string/address" />

        <EditTextPreference
            android:key="server_port"
            android:title="@string/port_title"
            android:icon="@drawable/ic_address_black"
            android:summary="@string/port_sum"
            android:dialogMessage="@string/info_port"
            android:defaultValue="@string/port" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_user">

        <EditTextPreference
            android:key="user_name"
            android:title="@string/user_title"
            android:icon="@drawable/ic_user_black"
            android:dialogMessage="@string/info_user"
            android:defaultValue="" />

        <EditTextPreference
            android:key="password"
            android:title="@string/pass_title"
            android:icon="@drawable/ic_pass_black"
            android:password="true"
            android:dialogMessage="@string/info_pass"
            android:defaultValue="olmatix" />

    </PreferenceCategory>

</PreferenceScreen>