<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:olmatix="http://olmatix.com">

    <PreferenceCategory
        android:title="@string/pref_location">

        <Preference
            android:name="setLocation"
            android:key="setLocation"
            android:icon="@drawable/ic_location_black"
            android:summary="@string/servicehomepos"
            android:title="@string/opt_servicehomepos" />

        <com.olmatix.utils.OlmatixSeekBarPreference
            android:defaultValue="150"
            android:key="distanceThold"
            android:max="1200"
            android:summary="@string/opt_Thold_desc"
            android:title="@string/opt_Thold"
            olmatix:min="30"
            olmatix:unitsLeft=""
            olmatix:unitsRight="m." />

        <CheckBoxPreference
            android:title="@string/switch_loc"
            android:key="switch_loc"
            android:defaultValue="true"
            android:summary="@string/opt_loc_notif">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:title="@string/switch_notif"
            android:key="switch_notif"
            android:defaultValue="true"
            android:summary="@string/opt_loc_notif1">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:title="@string/switch_sensor_door"
            android:key="switch_sensor_door"
            android:defaultValue="true"
            android:summary="@string/opt_loc_notif2">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:title="@string/switch_sensor_motion"
            android:key="switch_sensor_motion"
            android:defaultValue="true"
            android:summary="@string/opt_loc_notif3">
        </CheckBoxPreference>

        <CheckBoxPreference
            android:title="@string/switch_sensor_prox"
            android:key="switch_sensor_prox"
            android:defaultValue="true"
            android:summary="@string/opt_loc_notif4">
        </CheckBoxPreference>



    </PreferenceCategory>


</PreferenceScreen>