<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.olmatix.ui.activity.SettingsActivity$NetworkPreferenceFragment"
        android:icon="@drawable/ic_network_black"
        android:title="@string/pref_network" />

    <header
        android:fragment="com.olmatix.ui.activity.SettingsActivity$MiscPreferenceFragment"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/pref_misc" />

    <header
        android:id="@+id/setup"
        android:fragment="com.olmatix.ui.activity.SettingsActivity$SetupPreferenceFragment"
        android:icon="@drawable/ic_setup_black"
        android:title="@string/pref_setup" />

    <header
        android:id="@+id/about"
        android:icon="@drawable/ic_about_black"
        android:title="@string/pref_about"
        android:summary="@string/about_sum"/>


</preference-headers>
